--- a/css/style_.css
+++ b/css/style_.css
@@ -29,13 +29,12 @@ body {
 }
 
 /* GLASS */
-
 .glass{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 500px;
-  height: 200px;
+  width: 100%;
+  height: 10.0rem;
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255,255,255,0));
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
